# voltatest

./: .gitignore  Cargo.toml  README.md  demo.db
clock/: Cargo.toml
clock/src/: main.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  service.rs  types.rs  zmq.rs
core/src/alarm/: clock.rs  manager.rs  mod.rs  pattern.rs
core/src/repo/: mod.rs
core/src/repo/sqlite/: alarm.rs  alert.rs  mod.rs
voltaalert/: package-lock.json  package.json
voltaalert/src/: App.css  App.tsx  main.tsx  types.tsx
voltaalert/src-tauri/: Cargo.toml  tauri.conf.json
voltaalert/src-tauri/src/: lib.rs  main.rs
voltaalert/src/components/: alarm-panel.tsx  alert-feed.tsx
voltaalert/src/components/base/: listitem.tsx  panel.tsx
